service page ready

--- a/src/service-page.html
+++ b/src/service-page.html
@@ -379,12 +379,263 @@
             </div>
         </div>
     </section>
+    <section class="service-page-steps">
+        <div class="container">
+            <h2 class="service-page-colors__title font-normal">Что от вас требуется <span class="font-bold">для окраски</span></h2>
+            <ul class="steps-list steps-list--slider">
+                <li class="steps-list__item">
+                    <div class="steps-list__content">
+                        Вы оставляете заявку на сайте или по бесплатной линии
+                        <a href="tel:88007073501">8 (800) 707-35-01</a>
+                    </div>
+                </li>
+                <li class="steps-list__item">
+                    <div class="steps-list__content">
+                        Специалист связывается с Вами для уточнения деталей и выставляет счет на оплату согласно заявке.
+                    </div>
+                </li>
+                <li class="steps-list__item">
+                    <div class="steps-list__content">Вы проверяете и оплачиваете счет прямо на сайте без комиссий, либо по реквизитам в счете.</div>
+                </li>
+                <li class="steps-list__item">
+                    <div class="steps-list__content">Производство заказа за 1 день! Тщательная упаковка груза по местам.</div>
+                </li>
+                <li class="steps-list__item">
+                    <div class="steps-list__content">Отправка транспортной компанией или самовывоз из ближайшего филиала сети!</div>
+                </li>
+            </ul>
+        </div>
+    </section>
     @@include('components/bem-blocks/global/popular-fances/popular-fances.html',{
     title: '<span class="font-bold">Популярная автоматика</span>  для ворот',
     class: 'catalog-metal-popular'
     })
     @@include('components/bem-blocks/global/our-advantages/our-advantages.html')
-    @@include('components/bem-blocks/global/reviews/reviews.html')
+    <section class="service-page-price">
+        <div class="container">
+            <h2 class="service-page-price__title">Прайс-лист</h2>
+            <div class="service-page-price__container">
+                <div class="service-page-price__container-item">
+                    <div class="service-page-price__table">
+                        <div class="service-page-price__table-tr">
+                            <div class="service-page-price__table-td">ПЛОСКИЕ ИЗДЕЛИЯ</div>
+                            <div class="service-page-price__table-td">
+                                <ul>
+                                    <li>от 1000 м2</li>
+                                    <li>от 500 м2 до 1000 м2</li>
+                                    <li>от 100 м2 до 500 м2</li>
+                                    <li>до 100 м2</li>
+                                </ul>
+                            </div>
+                            <div class="service-page-price__table-td">
+                                <ul>
+                                    <li>170 руб/м2</li>
+                                    <li>175 руб/м2</li>
+                                    <li>100 руб/м2</li>
+                                    <li>Минимальня загрузка*</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="service-page-price__table-tr">
+                            <div class="service-page-price__table-td">ПЛОСКИЕ ГОФРИРОВАННЫЕ И ПЕРФОРИРОВАННЫЕ ИЗДЕЛИЯ</div>
+                            <div class="service-page-price__table-td">
+                                <ul>
+                                    <li>от 1000 м2</li>
+                                    <li>от 500 м2 до 1000 м2</li>
+                                    <li>от 100 м2 до 500 м2</li>
+                                    <li>до 100 м2</li>
+                                </ul>
+                            </div>
+                            <div class="service-page-price__table-td">
+                                <ul>
+                                    <li>170 руб/м2</li>
+                                    <li>175 руб/м2</li>
+                                    <li>100 руб/м2</li>
+                                    <li>Минимальня загрузка*</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="service-page-price__table-tr">
+                            <div class="service-page-price__table-td">ОБЪЕМНЫЕ ИЗДЕЛИЯ</div>
+                            <div class="service-page-price__table-td">
+                                <ul>
+                                    <li>от 1000 м2</li>
+                                    <li>от 500 м2 до 1000 м2</li>
+                                    <li>от 100 м2 до 500 м2</li>
+                                    <li>до 100 м2</li>
+                                </ul>
+                            </div>
+                            <div class="service-page-price__table-td">
+                                <ul>
+                                    <li>170 руб/м2</li>
+                                    <li>175 руб/м2</li>
+                                    <li>100 руб/м2</li>
+                                    <li>Минимальня загрузка*</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="service-page-price__table-tr">
+                            <div class="service-page-price__table-td">ПОГОНАЖНЫЕ ИЗДЕЛИЯ (ПЕРИМЕТР СЕЧЕНИЯ ДО 240 ММ)</div>
+                            <div class="service-page-price__table-td">
+                                <ul>
+                                    <li>от 1000 м2</li>
+                                    <li>от 500 м2 до 1000 м2</li>
+                                    <li>от 100 м2 до 500 м2</li>
+                                    <li>до 100 м2</li>
+                                </ul>
+                            </div>
+                            <div class="service-page-price__table-td">
+                                <ul>
+                                    <li>170 руб/м2</li>
+                                    <li>175 руб/м2</li>
+                                    <li>100 руб/м2</li>
+                                    <li>Минимальня загрузка*</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="service-page-price__container-item">
+                    <a href="#" class="service-page-price__more service-page-price__more--mobile">Смотреть все цены</a>
+                    <div class="service-page-price__form">
+                        <div class="service-page-price__form-title">Возникли вопросы?</div>
+                        <div class="service-page-price__form-text">Оставьте свои данные, менеджер в течении часа свяжется с Вами и назначит дату выезда замерщика</div>
+                        <div class="service-page-price__form-container">
+                            <fieldset class="form__fieldset service-page-price__form-fieldset required">
+                                <legend>Ваше имя</legend>
+                                <input type="text" class="form__input service-page-price__input" required placeholder="Иван Иванов">
+                            </fieldset>
+                            <fieldset class="form__fieldset service-page-price__form-fieldset required">
+                                <legend>Ваш телефон</legend>
+                                <input type="tel" class="form__input service-page-price__input" required placeholder="8 800 333 33 33">
+                            </fieldset>
+                            <fieldset class="form__fieldset service-page-price__form-fieldset required">
+                                <legend>Ваш email</legend>
+                                <input type="email" class="form__input service-page-price__input" required placeholder="ivan.ivanov@gmail.com">
+                            </fieldset>
+                            <div class="service-page-price__form-btn__container">
+                                <div class="form__checkbox-container service-page-price__form-checkbox">
+                                    <div class="form__checkbox-item form__checkbox-icon service-page-price__form-checkbox__icon">
+                                        <img src="img/global/icons/checkbox.svg" alt="checkbox">
+                                    </div>
+                                    <div class="form__checkbox-item">
+                                        <input checked type="checkbox" class="form__checkbox service-page-price__form-checkbox" hidden />
+                                        <div class="form__checkbox-text calculator__checkbox-text">Я даю согласие на обработку моих персональных данных</div>
+                                    </div>
+                                </div>
+                                <input type="submit" class="btn btn-action service-page-price__form-submit" value="Заказать обратный звонок">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <a href="#" class="service-page-price__more service-page-price__more--desc">Смотреть все цены</a>
+        </div>
+    </section>
+    <section class="service-page-info">
+        <div class="container">
+            <h2 class="service-page-info__title font-normal">Покраска металла в нашей компании делится в <span class="font-bold">несколько этапов:</span></h2>
+            <ul class="service-page-info__list">
+                <li class="service-page-info__list-item">
+                    <div class="service-page-info__list-header">
+                        <div class="service-page-info__list-img">
+                            <img data-src="img/service-page/info/item-1.jpg" class="lazy" alt="service">
+                        </div>
+                        <div class="service-page-info__list-title">
+                            Полная очистка поверхности, в том числе пескоструй кварцевым песком
+                        </div>
+                    </div>
+                    <div class="service-page-info__list-content">
+                        — последний убирает загрязнения даже из мелких трещин и труднодоступных мест, благодаря чему в разы уменьшается риск коррозии. Специалист выполняет контрольный осмотр изделия, и, если это требуется, делает обдув, убирающий остатки абразива;
+                    </div>
+                </li>
+                <li class="service-page-info__list-item">
+                    <div class="service-page-info__list-header">
+                        <div class="service-page-info__list-img">
+                            <img data-src="img/service-page/info/item-2.jpg" class="lazy" alt="service">
+                        </div>
+                        <div class="service-page-info__list-title">
+                            Нанесение порошкового грунта с последующим запеканием в термической печи.
+                        </div>
+                    </div>
+                    <div class="service-page-info__list-content">
+                        Грунтовка выбирается исходя из характеристик железа, и, чаще всего, это цинкосодержащие частицы, насыщающие верхний слой нерастворимыми соединениями и улучающие адгезию с финишным покрытием;</div>
+                </li>
+                <li class="service-page-info__list-item">
+                    <div class="service-page-info__list-header">
+                        <div class="service-page-info__list-img">
+                            <img data-src="img/service-page/info/item-3.jpg" class="lazy" alt="service">
+                        </div>
+                        <div class="service-page-info__list-title">
+                            Порошковое окрашивание в особой камере, закрытой от попадания пыли и влаги.
+                        </div>
+                    </div>
+                    <div class="service-page-info__list-content">
+                        Краска наносится электростатическим методом через пневмопистолет, придающий частицам определенный заряд. Работники внимательно следят, чтобы распыление происходило равномерно, без переизбытка слоя на выступающих частях и недобора в углублениях. Далее предмет отправляется в термокамеру для оплавления пигмента.                    </div>
+                </li>
+            </ul>
+        </div>
+    </section>
+    @@include('components/bem-blocks/global/portfolio-block/portfolio-block.html',{
+      class: 'grey-bg'
+    })
+    <section class="service-page-delivery">
+        <div class="container">
+            <h2 class="service-page-delivery__title font-normal">Упаковка и доставка <span class="font-bold">готовой продукции</span></h2>
+            <div class="service-page-delivery__container">
+                <div class="service-page-delivery__container-item service-page-delivery__content">
+                    <p>Чтобы максимально избавить заказчика от хлопот, и предоставить полный комплекс услуг может сделать все “под ключ” а именно максимально избавить заказчика от хлопот, и предоставить полный комплекс услуг, компания ООО “ПСК “Зелматик” может сделать все “под ключ” а именно:</p>
+                    <ul class="checked-list">
+                        <li class="checked-list__item"><i class="far fa-check-circle"></i>
+                            <div class="checked-list__content">Забрать продукцию у заказчика;</div>
+                        </li>
+                        <li class="checked-list__item">
+                            <i class="far fa-check-circle"></i>
+                            <div class="checked-list__content">Окрасить в интересующие цвета;</div>
+                        </li>
+                        <li class="checked-list__item">
+                            <i class="far fa-check-circle"></i>
+                            <div class="checked-list__content">Упаковать;</div>
+                        </li>
+                        <li class="checked-list__item">
+                            <i class="far fa-check-circle"></i>
+                            <div class="checked-list__content">Организовать доставку.</div>
+                        </li>
+                        <a href="#" class="btn service-page-delivery__more service-page-delivery__more--desc">Подробнее о доставке</a>
+                    </ul>
+                </div>
+                <div class="service-page-delivery__container-item">
+                    <div class="video-block__gallery">
+                        <ul class="video-block__gallery-images">
+                            <li class="video-block__gallery-images__item">
+                                <a data-fancybox="gallery" href="img/global/video-block/gallery/item-1.jpg">
+                                    <img class="lazy" data-src="img/global/video-block/gallery/item-1.jpg" alt="video">
+                                </a>
+                            </li>
+                            <li class="video-block__gallery-images__item">
+                                <a data-fancybox="gallery" href="img/global/video-block/gallery/item-2.jpg">
+                                    <img class="lazy" data-src="img/global/video-block/gallery/item-2.jpg" alt="video">
+                                </a>
+                            </li>
+                            <li class="video-block__gallery-images__item">
+                                <a data-fancybox="gallery" href="img/global/video-block/gallery/item-3.jpg">
+                                    <img class="lazy" data-src="img/global/video-block/gallery/item-3.jpg" alt="video">
+                                </a>
+                            </li>
+                        </ul>
+                        <div class="video-block__gallery-video">
+                            <div class="youtube video-block__youtube" data-youtube-img="img/global/video-block/gallery/bg.jpg" data-youtube="https://www.youtube.com/watch?v=5kAPExqSZ1I"></div>
+                        </div>
+                    </div>
+                    <a href="#" class="btn service-page-delivery__more service-page-delivery__more--mobile">Подробнее о доставке</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    @@include('components/bem-blocks/global/faq/faq.html')
+    @@include('components/bem-blocks/global/reviews/reviews.html',{
+      class: 'white-bg'
+    })
     @@include('components/bem-blocks/global/contact-action/contact-action.html')
     @@include('components/bem-blocks/global/subscribe-block/subscribe-block.html',{
     'class': 'catalog-metal-subscribe'
