service page v-2 ready

--- a/src/service-page.html
+++ b/src/service-page.html
@@ -23,7 +23,7 @@
                 breadcrumbItemSecond: 'Услуги',
                 breadcrumbItemThird: 'Порошковая покраска'
                 })
-                <h1 class="product-fence__title">Порошковая покраска</h1>
+                <h1 class="service-page__title">Порошковая покраска</h1>
                 <div class="service-page-banner_description">
                     <p>Компания STOREHOUSE предлагает услуги по порошковой покраске металла и металлоконструкций в Киеве. У нас доступен большой выбор цветов по шкале RAL (около 250). В своей работе используем порошковые краски известных, отлично зарекомендовавших себя европейских производителей.
                         Возьмите во внимание и то, что кроме покраски металлоизделий компания занимается и металлообработкой. Так что, имея на руках только чертежи, мы можем создать и покрасить для вас изделие любой формы. Благодаря собственному оборудованию и профессиональным навыкам нашего персонала мы сделаем для вас «конфету».
@@ -406,10 +406,6 @@
             </ul>
         </div>
     </section>
-    @@include('components/bem-blocks/global/popular-fances/popular-fances.html',{
-    title: '<span class="font-bold">Популярная автоматика</span>  для ворот',
-    class: 'catalog-metal-popular'
-    })
     @@include('components/bem-blocks/global/our-advantages/our-advantages.html')
     <section class="service-page-price">
         <div class="container">
@@ -418,14 +414,9 @@
                 <div class="service-page-price__container-item">
                     <div class="service-page-price__table">
                         <div class="service-page-price__table-tr">
-                            <div class="service-page-price__table-td">ПЛОСКИЕ ИЗДЕЛИЯ</div>
+                            <div class="service-page-price__table-td">Сталь</div>
                             <div class="service-page-price__table-td">
-                                <ul>
-                                    <li>от 1000 м2</li>
-                                    <li>от 500 м2 до 1000 м2</li>
-                                    <li>от 100 м2 до 500 м2</li>
-                                    <li>до 100 м2</li>
-                                </ul>
+
                             </div>
                             <div class="service-page-price__table-td">
                                 <ul>
