company page is ready

--- a/src/refund.html
+++ b/src/refund.html
@@ -152,11 +152,11 @@
             </div>
         </div>
     </section>
-    @@include('components/bem-blocks/global/contact-action/contact-action.html')
-    @@include('components/bem-blocks/global/subscribe-block/subscribe-block.html',{
-    'class': 'catalog-metal-subscribe'
-    })
     @@include('components/bem-blocks/global/map/map.html')
+    @@include('components/bem-blocks/global/subscribe-block/subscribe-block.html',{
+    class: 'bottom-action'
+    })
+    @@include('components/bem-blocks/global/contact-action/contact-action.html')
     @@include('components/bem-blocks/global/our-news/our-news.html')
 </main>
 @@include('components/page/_3_footer.html')
