--- a/src/payments.html
+++ b/src/payments.html
@@ -159,10 +159,11 @@
             </div>
         </div>
     </section>
-    @@include('components/bem-blocks/global/contact-action/contact-action.html')
+    @@include('components/bem-blocks/global/map/map.html')
     @@include('components/bem-blocks/global/subscribe-block/subscribe-block.html',{
-    'class': 'catalog-metal-subscribe'
+    class: 'bottom-action'
     })
+    @@include('components/bem-blocks/global/contact-action/contact-action.html')
     @@include('components/bem-blocks/global/map/map.html')
     @@include('components/bem-blocks/global/our-news/our-news.html')
 </main>
