--- a/src/blog-page.html
+++ b/src/blog-page.html
@@ -29,8 +29,8 @@
     </section>
     <section class="blog-page-header">
         <div class="container">
-            <div class="blog-page-header__img">
-                <img data-src="img/blog-page/img.jpg" class="lazy" alt="blog">
+            <div class="blog-page-header__img" itemscope itemtype="http://schema.org/ImageObject">
+                <img itemprop="contentUrl"  data-src="img/blog-page/img.jpg" class="lazy" alt="blog">
                 <div class="blog-page-header__mobile">
                     <div class="blog-page-header__mobile-item">
                         <div class="blog-page-header__info-rate blog-page-header__info-rate--mobile">
@@ -277,12 +277,12 @@
             })
             <h5>Заголовок h5</h5>
             <p>С другой стороны начало повседневной работы по формированию позиции обеспечивает широкому кругу (специалистов) участие в формировании направлений прогрессивного развития. Повседневная практика показывает, что рамки и место обучения кадров позволяет выполнять важные задания по разработке модели развития. Повседневная практика показывает, что консультация с широким активом требуют от нас анализа позиций, занимаемых участниками в отношении поставленных задач. Идейные соображения высшего порядка, а также сложившаяся структура организации представляет собой интересный эксперимент проверки существенных финансовых и административных условий. Равным образом начало повседневной работы по формированию позиции позволяет оценить значение новых предложений.</p>
-            <div class="blog-page-content__other-page">
+            <div class="blog-page-content__other-page" itemscope itemtype="http://schema.org/ImageObject">
                 <div class="blog-page-content__other-page__img">
-                    <img data-src="img/blog-page/img.jpg" class="lazy" alt="blog">
+                    <img data-src="img/blog-page/img.jpg" itemprop="img/blog-page/img.jpg" class="lazy" alt="blog">
                 </div>
                 <div class="blog-page-content__other-page__content">
-                    <div class="blog-page-content__other-page__content-title">Как женщина готовится к появлению ребенка?</div>
+                    <div class="blog-page-content__other-page__content-title" itemprop="name">Как женщина готовится к появлению ребенка?</div>
                     <a href="#" class="blog-page-content__other-page__content-more">Читать подробнее</a>
                 </div>
             </div>
@@ -299,23 +299,23 @@
                 <div class="service-page-delivery__container-item">
                     <div class="video-block__gallery">
                         <ul class="video-block__gallery-images">
-                            <li class="video-block__gallery-images__item">
+                            <li class="video-block__gallery-images__item" itemscope itemtype="http://schema.org/ImageObject">
                                 <a data-fancybox="gallery" href="img/global/video-block/gallery/item-1.jpg">
-                                    <img class="lazy" data-src="img/global/video-block/gallery/item-1.jpg" alt="video">
+                                    <img  itemprop="contentUrl" class="lazy" data-src="img/global/video-block/gallery/item-1.jpg" alt="video">
                                 </a>
                             </li>
-                            <li class="video-block__gallery-images__item">
+                            <li class="video-block__gallery-images__item" itemscope itemtype="http://schema.org/ImageObject">
                                 <a data-fancybox="gallery" href="img/global/video-block/gallery/item-2.jpg">
-                                    <img class="lazy" data-src="img/global/video-block/gallery/item-2.jpg" alt="video">
+                                    <img  itemprop="contentUrl" class="lazy" data-src="img/global/video-block/gallery/item-2.jpg" alt="video">
                                 </a>
                             </li>
-                            <li class="video-block__gallery-images__item">
+                            <li class="video-block__gallery-images__item" itemscope itemtype="http://schema.org/ImageObject">
                                 <a data-fancybox="gallery" href="img/global/video-block/gallery/item-3.jpg">
-                                    <img class="lazy" data-src="img/global/video-block/gallery/item-3.jpg" alt="video">
+                                    <img  itemprop="contentUrl" class="lazy" data-src="img/global/video-block/gallery/item-3.jpg" alt="video">
                                 </a>
                             </li>
                         </ul>
-                        <div class="video-block__gallery-video">
+                        <div  class="video-block__gallery-video">
                             <div class="youtube video-block__youtube" data-youtube-img="img/global/video-block/gallery/bg.jpg" data-youtube="https://www.youtube.com/watch?v=5kAPExqSZ1I"></div>
                         </div>
                     </div>
