--- a/src/product-fence.html
+++ b/src/product-fence.html
@@ -604,6 +604,55 @@
     })
     @@include('components/bem-blocks/global/map/map.html')
     @@include('components/bem-blocks/global/our-news/our-news.html')
+    <!-- Product schema -->
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "Product",
+            "aggregateRating": {
+                "@type": "AggregateRating",
+                "ratingValue": "3.5",
+                "reviewCount": "11"
+            },
+            "description": "0.7 cubic feet countertop microwave. Has six preset cooking categories and convenience features like Add-A-Minute and Child Lock.",
+            "name": "Kenmore White 17\" Microwave",
+            "image": "kenmore-microwave-17in.jpg",
+            "offers": {
+                "@type": "Offer",
+                "availability": "https://schema.org/InStock",
+                "price": "55.00",
+                "priceCurrency": "USD"
+            },
+            "review": [
+                {
+                    "@type": "Review",
+                    "author": "Ellie",
+                    "datePublished": "2011-04-01",
+                    "reviewBody": "The lamp burned out and now I have to replace it.",
+                    "name": "Not a happy camper",
+                    "reviewRating": {
+                        "@type": "Rating",
+                        "bestRating": "5",
+                        "ratingValue": "1",
+                        "worstRating": "1"
+                    }
+                },
+                {
+                    "@type": "Review",
+                    "author": "Lucas",
+                    "datePublished": "2011-03-25",
+                    "reviewBody": "Great microwave for the price. It is small and fits in my apartment.",
+                    "name": "Value purchase",
+                    "reviewRating": {
+                        "@type": "Rating",
+                        "bestRating": "5",
+                        "ratingValue": "4",
+                        "worstRating": "1"
+                    }
+                }
+            ]
+        }
+    </script>
 </main>
 @@include('components/page/_3_footer.html')
 @@include('components/page/_4_scripts.html')
